--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "botbuilder": "^4.2.0",
     "botframework-config": "^4.2.0",
     "dotenv": "^6.1.0",
+    "node-nlp": "^3.0.3",
     "restify": "^7.2.3"
   },
   "devDependencies": {
